# theemeraldexchange

./: .audit_allfiles.txt  .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  DESIGN.md  Dockerfile  LICENSE  PRODUCT.md  README.md  THIRD-PARTY-LICENSES.md  TODO.md  deny.toml  docker-compose.yml  eslint.config.js  goal-apple-companion.md  goal-quality-companion.md  implementation-notes.md  index.html  netlify.toml  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.env.ts  vitest.eval.config.ts  vitest.setup.ts
.autoloop/: .gitignore  CONTROL.md  GOALS.md
.github/: dependabot.yml
.netlify/: netlify.toml
crates/emerald-contracts/: Cargo.toml
crates/emerald-contracts-napi/: Cargo.toml  index.d.ts  index.js  package.json
crates/emerald-contracts-napi/scripts/: build-with-dts-guard.mjs  prepare.mjs
crates/emerald-contracts-napi/src/: lib.rs
crates/emerald-contracts-pyo3/: Cargo.toml  pyproject.toml
crates/emerald-contracts-pyo3/src/: lib.rs
crates/emerald-contracts/examples/: gen_vectors.rs
crates/emerald-contracts/src/: canonical.rs  device_token.rs  hkdf.rs  internal_principal.rs  jwe.rs  lib.rs  stream_token.rs  sub.rs  telemetry.rs
crates/emerald-contracts/tests/: vectors.rs
crates/media-core/: Cargo.toml  Dockerfile
crates/media-core/migrations/: 0001_init.sql  0002_media_metadata.sql  0003_search_fts.sql  0004_media_markers.sql  0005_music.sql  0006_playlists_collections.sql  0007_extra_content.sql  0008_album_art.sql  0009_episode_negcache.sql  0010_content_rating.sql  0011_movie_rating_negcache.sql  0012_movie_match_negcache.sql  0013_probe_negcache.sql
crates/media-core/src/: auth.rs  capability.rs  config.rs  db.rs  error.rs  filename.rs  lib.rs  main.rs  models.rs  podcasts.rs  probe.rs  routes.rs  scanner.rs  subtitles.rs  tmdb.rs
crates/media-core/tests/: show_title_normalization_vectors.rs
crates/media-core/tests/fixtures/: tmdb-match-accuracy.json
crates/transcoder/: Cargo.toml  Dockerfile
crates/transcoder/src/: args.rs  concurrency.rs  encoders.rs  keyframes.rs  lib.rs  main.rs  plan.rs  routes.rs  session.rs  subs_manifest.rs  trickplay.rs  vod_manifest.rs
crates/transcoder/tests/: real_ffmpeg.rs
crates/ytresolve/: Cargo.toml  POTOKEN.md  README.md  clients.json  signatures.json
crates/ytresolve/src/: cipher.rs  jsengine.rs  lib.rs  main.rs  manifest.rs  player_js.rs  potoken.rs
crates/ytresolve/tests/fixtures/: nsig_player.js  sig_classic_player.js
docs/: AUDIT-2026-05-28-honesty-and-best-practice.md  DECISION-grant-source-precedence.md  IPTV-QUALITY-DIAGNOSIS.md  M4-TRANSCODE-VERIFICATION.md  MONETIZATION-AND-PUBLISHING.md  PRODUCTION-AUDIT.html  PRODUCTION-READINESS-2026-05-30.md  README.md  ROADMAP-STATUS.md  UI-IMPROVEMENTS.md  audit-results.json  recommendations.md  trickplay-iframe-spec.md
nginx/: default.conf
plans/: 001-split-threejs-out-of-entry-chunk.md  002-index-epg-grid-window-scan.md  003-reconcile-env-example.md  004-iptv-resume-prompt-parity.md  005-mock-media-core-dev-mode.md  README.md  resume-scrubber-fix.md
public/: favicon-test.html  legal.css  privacy.html  resting.webm  support.html
recommender/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
recommender/app/: config.py  context.py  db.py  internal_principal.py  main.py  metrics.py  reasons.py  retrieval.py  schemas.py  sub_validation.py  telemetry.py
recommender/app/recipes/: __init__.py  baseline_cosine.py  cold_start_trending.py  fused.py  item_knn.py  mmr_diverse.py
recommender/eval/: README.md  __init__.py  build_holdout.py  holdout.example.jsonl  holdout.seed.jsonl  test_build_holdout.py
recommender/migrations/: 0001_initial.sql  0002_rec_log_ts_index.sql  0003_rec_log_datetime_ts_index.sql  0004_rec_outcomes_datetime_ts_index.sql  0005_iptv_kinds.sql  0006_namespace_sub.sql  0007_drop_iptv_kinds.sql  0008_user_feedback_watched.sql
recommender/research/: .gitignore  coengagement.py  content_embed.py  fusion.py  iter_1_output.txt  iter_2_output.txt  iter_3_output.txt  iter_4_output.txt  iter_5_output.txt  iter_6_output.txt  iteration_log.md  ralph_prompt.md  recsys_loop.py
recommender/scripts/: seed_synthetic.py  verify_embedding_runtime.py
recommender/tests/: test_cache_invalidation.py  test_config_principal_mode.py  test_db_migrator.py  test_emerald_contracts_parity.py  test_featurize_model_revision.py  test_feedback_signals.py  test_fresh_volume_boot.py  test_funnel_metrics.py  test_holdout_status_cache.py  test_internal_principal.py  test_lockfile_consistency.py  test_main_principal.py  test_optimizer_eligibility.py  test_optimizer_holdout.py  test_requirements_lock.py  test_schema_positive_ids.py  test_scoring_path.py  test_sub_validation.py  test_telemetry.py  test_tmdb_ingest_drain.py  test_watched_feedback.py
recommender/tests/fixtures/: torch_2_12_embedding_baseline.json
recommender/workers/: featurize.py  iptv_ingest.py  optimizer.py  test_iptv_ingest.py  tmdb_client.py  tmdb_ingest.py
scripts/: assemble-audit.mjs  build-audit-html.mjs  check-image-pin-staleness.mjs  deploy-image.sh  deploy-nas.sh  eex-deploy.sh  m4-soak.sh  m4-stress-bench.sh  m4-transcode-proof.sh  media-playback-proof.sh  nas-canary-deploy.sh  nas-cloudflared-watchdog.sh  nas-safe-build.sh  recommender-fresh-volume-boot-proof.sh  self-host-env.sh  sidecar-subtitle-browser-proof.mjs  sidecar-subtitle-live-proof.mjs  write-audit-synthesis.mjs  yt-canary.mjs
selfhost/: .env.example  docker-compose.yml  install.sh  tailscale-serve.json
server/: app.authz.test.ts  app.csrf.test.ts  app.iptv-disabled.test.ts  app.logRedaction.test.ts  app.media-gate.test.ts  app.onError.test.ts  app.security.test.ts  app.ts  auth.test.ts  auth.ts  authDeploymentContract.test.ts  ci.audit.test.ts  ci.auditGate.test.ts  env.contract.test.ts  env.test.ts  env.ts  gitattributes.contract.test.ts  index.ts  licensing.test.ts  notConfigured.test.ts  plex.test.ts  plex.ts  session.test.ts  (+4 more)
(+745 files in other folders)
