[workspace]
resolver = "2"
members = [
  "crates/emerald-contracts",
  "crates/emerald-contracts-napi",
  "crates/emerald-contracts-pyo3",
  "crates/media-core",
  "crates/transcoder",
]

[workspace.package]
edition = "2024"
license-file = "LICENSE"
authors = ["ChrisPachulski"]
# Match the only toolchain actually shipped (CI dtolnay/rust-toolchain 1.90, all
# Dockerfiles rust:1.90-slim-bookworm). The previous 1.85 floor was never built
# or tested, so it was misleading documentation. If an older support floor is
# ever genuinely required, add a dedicated MSRV CI lane (dtolnay
# /rust-toolchain@1.85 + cargo build) rather than lowering this back.
rust-version = "1.90"

[workspace.dependencies]
aes-gcm = "0.10.3"
base64 = "0.22"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
rand = "0.8"
ulid = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
