[workspace]
resolver = "2"
members = [
  "crates/emerald-contracts",
  "crates/emerald-contracts-napi",
  "crates/emerald-contracts-pyo3",
  "crates/media-core",
  "crates/transcoder",
]

[workspace.package]
edition = "2024"
license-file = "LICENSE"
authors = ["ChrisPachulski"]
# Match the only toolchain actually shipped (CI dtolnay/rust-toolchain 1.96, all
# Dockerfiles rust:1.96-slim-bookworm). Bumped from 1.90 alongside sqlx 0.9,
# which requires rustc 1.94+. If an older support floor is ever genuinely
# required, add a dedicated MSRV CI lane rather than lowering this back.
rust-version = "1.96"

[workspace.dependencies]
aes-gcm = "0.10.3"
base64 = "0.22"
hkdf = "0.12"
hmac = "0.13"
sha2 = "0.10"
subtle = "2"
rand = "0.8"
ulid = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
