[project]
name = "exchange-recommender"
version = "0.1.0"
description = "Local recommender service for The Emerald Exchange. Replaces per-request Claude calls with a SQLite + sqlite-vec scoring pipeline."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "sqlite-vec>=0.1.9",
  "numpy>=1.26",
  "httpx>=0.28",
  "anyio>=4.6",
  "anthropic>=0.42",
  "tenacity>=9.0",
  "python-dateutil>=2.9",
  "sentence-transformers>=3.3",
]

[project.optional-dependencies]
dev = ["ruff>=0.7", "pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "workers"]

[tool.ruff]
line-length = 100
target-version = "py312"
