[package]
name = "emerald-contracts-napi"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "N-API bindings for emerald-contracts. Built by napi-rs; consumed from Hono."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
emerald-contracts = { path = "../emerald-contracts" }
napi = { version = "2.16", default-features = false, features = ["napi6", "serde-json"] }
napi-derive = "2.16"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"
