[package]
name = "emerald-contracts-pyo3"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PyO3 bindings for emerald-contracts. Consumed by the recommender FastAPI service."
publish = false

[lib]
name = "emerald_contracts"
crate-type = ["cdylib"]

[dependencies]
# Imported as `ec` to avoid colliding with the `#[pymodule] fn emerald_contracts`
# this crate exposes.
ec = { package = "emerald-contracts", path = "../emerald-contracts" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py312"] }
serde_json = { workspace = true }
