[package]
name = "emerald-contracts"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Canonical cross-language contracts for The Emerald Exchange: tokens, HKDF, sub-namespace, PII scrub. Source of truth — Hono consumes via N-API, recommender via PyO3, Apple via Swift port."
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
rand.workspace = true
ulid.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true

[dev-dependencies]
base64.workspace = true
serde_json.workspace = true
