[package]
name = "media-core"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "The Emerald Exchange media-core (M3): Rust library server — scans local media, owns media.db, serves direct-play library + watch state behind Hono's internal-principal boundary."
publish = false

[[bin]]
name = "media-core"
path = "src/main.rs"

[lib]
name = "media_core"
path = "src/lib.rs"

[dependencies]
emerald-contracts = { path = "../emerald-contracts" }
axum = { version = "0.8", features = ["json", "query", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "signal", "net", "time"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["fs", "trace", "cors", "timeout"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2.workspace = true
# Photo scan: EXIF taken-at/dimensions without spawning ffprobe per image.
kamadak-exif = "0.6"
# Podcast RSS parsing (pull parser; serde mode fights itunes: namespaces).
quick-xml = "0.37"

[dev-dependencies]
tempfile = "3"
