[package]
name = "transcoder"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "The Emerald Exchange transcoder (M4 scaffold): capability-driven transcode plans, an ffmpeg session/job state machine, and an axum surface that turns media-core's 503 transcoder seam into a real grant. No FFI — ffmpeg is invoked via tokio::process."
publish = false

[[bin]]
name = "transcoder"
path = "src/main.rs"

[lib]
name = "transcoder"
path = "src/lib.rs"

[dependencies]
media-core = { path = "../media-core" }
axum = { version = "0.8", features = ["json", "query", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "signal", "net", "time", "sync"] }
tower-http = { version = "0.6", features = ["trace"] }
serde.workspace = true
serde_json.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
