[package]
name = "transcoder"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "The Emerald Exchange transcoder (M4 scaffold): capability-driven transcode plans, an ffmpeg session/job state machine, and an axum surface that turns media-core's 503 transcoder seam into a real grant. No FFI — ffmpeg is invoked via tokio::process."
publish = false

[[bin]]
name = "transcoder"
path = "src/main.rs"

[lib]
name = "transcoder"
path = "src/lib.rs"

[features]
# OFF by default so `cargo test` stays hermetic (no ffmpeg required). When
# enabled, the `tests/real_ffmpeg.rs` suite invokes a REAL ffmpeg/ffprobe to
# prove the argv we assemble actually produces playable HLS — the coverage gap
# the state-machine stub tests cannot close. CI runs the gated job inside the
# mwader/static-ffmpeg image already pinned in the Dockerfile:
#   cargo test -p transcoder --features requires-ffmpeg
requires-ffmpeg = []

[dependencies]
media-core = { path = "../media-core" }
axum = { version = "0.8", features = ["json", "query", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "signal", "net", "time", "sync"] }
tower-http = { version = "0.6", features = ["trace"] }
serde.workspace = true
serde_json.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
# §15 telemetry: self-report crashes/errors to Glitchtip when a DSN is present.
# rustls (not native-tls/OpenSSL) matches the repo's no-OpenSSL posture; the
# tracing feature bridges existing tracing::error!/warn! into Glitchtip issues.
sentry = { version = "0.35", default-features = false, features = ["backtrace", "contexts", "panic", "rustls", "reqwest", "tracing"] }
sentry-tracing = "0.48"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
